RateEngine/obj/Debug/RateGrammarParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5.3
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from D:\my documents\visual studio 2013\Projects\RateEngine\RateEngine\RateGrammar.g4 by ANTLR 4.5.3

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace RateEngine {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5.3")]
[System.CLSCompliant(false)]
public partial class RateGrammarParser : Parser {
	public const int
		CARTYPE=1, NUMBER=2, TIME=3, CASEHEAD=4, LIMITHEAD=5, DAYLIMIT=6, MONTHLIMIT=7, 
		OUTDAY=8, WORKDAY=9, APINAME=10, LEFT_CURLY=11, RIGHT_CURLY=12, COLON=13, 
		LEFT_BRACKET=14, RIGHT_BRACKET=15, HYPHEN=16, LEFT_PAREN=17, RIGHT_PAREN=18, 
		MUL=19, LINE_COMMENT=20, WS=21;
	public const int
		RULE_compileUnit = 0, RULE_case_head = 1, RULE_left_parktime = 2, RULE_right_parktime = 3, 
		RULE_left_time = 4, RULE_middle_time = 5, RULE_right_time = 6, RULE_workday = 7, 
		RULE_case_condition = 8, RULE_value = 9, RULE_parameter = 10, RULE_api = 11, 
		RULE_case_body = 12, RULE_case_expression = 13, RULE_case_expressions = 14, 
		RULE_limit_head = 15, RULE_limit_condition = 16, RULE_limit_body = 17, 
		RULE_limit_expression = 18, RULE_limit_expressions = 19, RULE_cartype_head = 20, 
		RULE_cartype_body = 21, RULE_cartype_expression = 22, RULE_cartype_expressions = 23, 
		RULE_configfile = 24;
	public static readonly string[] ruleNames = {
		"compileUnit", "case_head", "left_parktime", "right_parktime", "left_time", 
		"middle_time", "right_time", "workday", "case_condition", "value", "parameter", 
		"api", "case_body", "case_expression", "case_expressions", "limit_head", 
		"limit_condition", "limit_body", "limit_expression", "limit_expressions", 
		"cartype_head", "cartype_body", "cartype_expression", "cartype_expressions", 
		"configfile"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, null, "'day'", "'month'", "'24h+'", null, 
		null, "'{'", "'}'", "':'", "'['", "']'", "'-'", "'('", "')'", "'*'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "CARTYPE", "NUMBER", "TIME", "CASEHEAD", "LIMITHEAD", "DAYLIMIT", 
		"MONTHLIMIT", "OUTDAY", "WORKDAY", "APINAME", "LEFT_CURLY", "RIGHT_CURLY", 
		"COLON", "LEFT_BRACKET", "RIGHT_BRACKET", "HYPHEN", "LEFT_PAREN", "RIGHT_PAREN", 
		"MUL", "LINE_COMMENT", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "RateGrammar.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public RateGrammarParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class CompileUnitContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(RateGrammarParser.Eof, 0); }
		public CompileUnitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_compileUnit; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRateGrammarListener typedListener = listener as IRateGrammarListener;
			if (typedListener != null) typedListener.EnterCompileUnit(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRateGrammarListener typedListener = listener as IRateGrammarListener;
			if (typedListener != null) typedListener.ExitCompileUnit(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRateGrammarVisitor<TResult> typedVisitor = visitor as IRateGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCompileUnit(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CompileUnitContext compileUnit() {
		CompileUnitContext _localctx = new CompileUnitContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_compileUnit);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 50; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Case_headContext : ParserRuleContext {
		public ITerminalNode CASEHEAD() { return GetToken(RateGrammarParser.CASEHEAD, 0); }
		public Case_headContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_case_head; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRateGrammarListener typedListener = listener as IRateGrammarListener;
			if (typedListener != null) typedListener.EnterCase_head(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRateGrammarListener typedListener = listener as IRateGrammarListener;
			if (typedListener != null) typedListener.ExitCase_head(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRateGrammarVisitor<TResult> typedVisitor = visitor as IRateGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCase_head(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Case_headContext case_head() {
		Case_headContext _localctx = new Case_headContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_case_head);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 52; Match(CASEHEAD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Left_parktimeContext : ParserRuleContext {
		public ITerminalNode NUMBER() { return GetToken(RateGrammarParser.NUMBER, 0); }
		public Left_parktimeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_left_parktime; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRateGrammarListener typedListener = listener as IRateGrammarListener;
			if (typedListener != null) typedListener.EnterLeft_parktime(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRateGrammarListener typedListener = listener as IRateGrammarListener;
			if (typedListener != null) typedListener.ExitLeft_parktime(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRateGrammarVisitor<TResult> typedVisitor = visitor as IRateGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLeft_parktime(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Left_parktimeContext left_parktime() {
		Left_parktimeContext _localctx = new Left_parktimeContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_left_parktime);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 54; Match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Right_parktimeContext : ParserRuleContext {
		public ITerminalNode NUMBER() { return GetToken(RateGrammarParser.NUMBER, 0); }
		public Right_parktimeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_right_parktime; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRateGrammarListener typedListener = listener as IRateGrammarListener;
			if (typedListener != null) typedListener.EnterRight_parktime(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRateGrammarListener typedListener = listener as IRateGrammarListener;
			if (typedListener != null) typedListener.ExitRight_parktime(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRateGrammarVisitor<TResult> typedVisitor = visitor as IRateGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRight_parktime(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Right_parktimeContext right_parktime() {
		Right_parktimeContext _localctx = new Right_parktimeContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_right_parktime);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 56; Match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Left_timeContext : ParserRuleContext {
		public ITerminalNode TIME() { return GetToken(RateGrammarParser.TIME, 0); }
		public Left_timeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_left_time; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRateGrammarListener typedListener = listener as IRateGrammarListener;
			if (typedListener != null) typedListener.EnterLeft_time(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRateGrammarListener typedListener = listener as IRateGrammarListener;
			if (typedListener != null) typedListener.ExitLeft_time(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRateGrammarVisitor<TResult> typedVisitor = visitor as IRateGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLeft_time(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Left_timeContext left_time() {
		Left_timeContext _localctx = new Left_timeContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_left_time);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 58; Match(TIME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Middle_timeContext : ParserRuleContext {
		public ITerminalNode TIME() { return GetToken(RateGrammarParser.TIME, 0); }
		public Middle_timeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_middle_time; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRateGrammarListener typedListener = listener as IRateGrammarListener;
			if (typedListener != null) typedListener.EnterMiddle_time(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRateGrammarListener typedListener = listener as IRateGrammarListener;
			if (typedListener != null) typedListener.ExitMiddle_time(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRateGrammarVisitor<TResult> typedVisitor = visitor as IRateGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMiddle_time(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Middle_timeContext middle_time() {
		Middle_timeContext _localctx = new Middle_timeContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_middle_time);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 60; Match(TIME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Right_timeContext : ParserRuleContext {
		public ITerminalNode TIME() { return GetToken(RateGrammarParser.TIME, 0); }
		public Right_timeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_right_time; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRateGrammarListener typedListener = listener as IRateGrammarListener;
			if (typedListener != null) typedListener.EnterRight_time(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRateGrammarListener typedListener = listener as IRateGrammarListener;
			if (typedListener != null) typedListener.ExitRight_time(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRateGrammarVisitor<TResult> typedVisitor = visitor as IRateGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRight_time(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Right_timeContext right_time() {
		Right_timeContext _localctx = new Right_timeContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_right_time);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 62; Match(TIME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WorkdayContext : ParserRuleContext {
		public ITerminalNode LEFT_BRACKET() { return GetToken(RateGrammarParser.LEFT_BRACKET, 0); }
		public ITerminalNode WORKDAY() { return GetToken(RateGrammarParser.WORKDAY, 0); }
		public ITerminalNode RIGHT_BRACKET() { return GetToken(RateGrammarParser.RIGHT_BRACKET, 0); }
		public WorkdayContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_workday; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRateGrammarListener typedListener = listener as IRateGrammarListener;
			if (typedListener != null) typedListener.EnterWorkday(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRateGrammarListener typedListener = listener as IRateGrammarListener;
			if (typedListener != null) typedListener.ExitWorkday(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRateGrammarVisitor<TResult> typedVisitor = visitor as IRateGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWorkday(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public WorkdayContext workday() {
		WorkdayContext _localctx = new WorkdayContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_workday);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 64; Match(LEFT_BRACKET);
			State = 65; Match(WORKDAY);
			State = 66; Match(RIGHT_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Case_conditionContext : ParserRuleContext {
		public ITerminalNode LEFT_BRACKET() { return GetToken(RateGrammarParser.LEFT_BRACKET, 0); }
		public Left_parktimeContext left_parktime() {
			return GetRuleContext<Left_parktimeContext>(0);
		}
		public ITerminalNode[] HYPHEN() { return GetTokens(RateGrammarParser.HYPHEN); }
		public ITerminalNode HYPHEN(int i) {
			return GetToken(RateGrammarParser.HYPHEN, i);
		}
		public Right_parktimeContext right_parktime() {
			return GetRuleContext<Right_parktimeContext>(0);
		}
		public ITerminalNode RIGHT_BRACKET() { return GetToken(RateGrammarParser.RIGHT_BRACKET, 0); }
		public WorkdayContext workday() {
			return GetRuleContext<WorkdayContext>(0);
		}
		public Left_timeContext left_time() {
			return GetRuleContext<Left_timeContext>(0);
		}
		public Right_timeContext right_time() {
			return GetRuleContext<Right_timeContext>(0);
		}
		public Middle_timeContext middle_time() {
			return GetRuleContext<Middle_timeContext>(0);
		}
		public ITerminalNode OUTDAY() { return GetToken(RateGrammarParser.OUTDAY, 0); }
		public Case_conditionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_case_condition; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRateGrammarListener typedListener = listener as IRateGrammarListener;
			if (typedListener != null) typedListener.EnterCase_condition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRateGrammarListener typedListener = listener as IRateGrammarListener;
			if (typedListener != null) typedListener.ExitCase_condition(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRateGrammarVisitor<TResult> typedVisitor = visitor as IRateGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCase_condition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Case_conditionContext case_condition() {
		Case_conditionContext _localctx = new Case_conditionContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_case_condition);
		try {
			State = 118;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,0,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 68; Match(LEFT_BRACKET);
				State = 69; left_parktime();
				State = 70; Match(HYPHEN);
				State = 71; right_parktime();
				State = 72; Match(RIGHT_BRACKET);
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 74; Match(LEFT_BRACKET);
				State = 75; left_parktime();
				State = 76; Match(HYPHEN);
				State = 77; right_parktime();
				State = 78; Match(RIGHT_BRACKET);
				State = 79; workday();
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 81; Match(LEFT_BRACKET);
				State = 82; left_time();
				State = 83; Match(HYPHEN);
				State = 84; right_time();
				State = 85; Match(RIGHT_BRACKET);
				}
				break;

			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 87; Match(LEFT_BRACKET);
				State = 88; left_time();
				State = 89; Match(HYPHEN);
				State = 90; right_time();
				State = 91; Match(RIGHT_BRACKET);
				State = 92; workday();
				}
				break;

			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 94; Match(LEFT_BRACKET);
				State = 95; left_time();
				State = 96; Match(HYPHEN);
				State = 97; middle_time();
				State = 98; Match(HYPHEN);
				State = 99; right_time();
				State = 100; Match(RIGHT_BRACKET);
				}
				break;

			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 102; Match(LEFT_BRACKET);
				State = 103; left_time();
				State = 104; Match(HYPHEN);
				State = 105; middle_time();
				State = 106; Match(HYPHEN);
				State = 107; right_time();
				State = 108; Match(RIGHT_BRACKET);
				State = 109; workday();
				}
				break;

			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 111; Match(LEFT_BRACKET);
				State = 112; Match(OUTDAY);
				State = 113; Match(RIGHT_BRACKET);
				}
				break;

			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 114; Match(LEFT_BRACKET);
				State = 115; Match(OUTDAY);
				State = 116; Match(RIGHT_BRACKET);
				State = 117; workday();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ValueContext : ParserRuleContext {
		public ITerminalNode NUMBER() { return GetToken(RateGrammarParser.NUMBER, 0); }
		public ValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_value; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRateGrammarListener typedListener = listener as IRateGrammarListener;
			if (typedListener != null) typedListener.EnterValue(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRateGrammarListener typedListener = listener as IRateGrammarListener;
			if (typedListener != null) typedListener.ExitValue(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRateGrammarVisitor<TResult> typedVisitor = visitor as IRateGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitValue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ValueContext value() {
		ValueContext _localctx = new ValueContext(_ctx, State);
		EnterRule(_localctx, 18, RULE_value);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 120; Match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParameterContext : ParserRuleContext {
		public ITerminalNode NUMBER() { return GetToken(RateGrammarParser.NUMBER, 0); }
		public ParameterContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parameter; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRateGrammarListener typedListener = listener as IRateGrammarListener;
			if (typedListener != null) typedListener.EnterParameter(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRateGrammarListener typedListener = listener as IRateGrammarListener;
			if (typedListener != null) typedListener.ExitParameter(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRateGrammarVisitor<TResult> typedVisitor = visitor as IRateGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParameter(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParameterContext parameter() {
		ParameterContext _localctx = new ParameterContext(_ctx, State);
		EnterRule(_localctx, 20, RULE_parameter);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 122; Match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ApiContext : ParserRuleContext {
		public ITerminalNode APINAME() { return GetToken(RateGrammarParser.APINAME, 0); }
		public ITerminalNode LEFT_PAREN() { return GetToken(RateGrammarParser.LEFT_PAREN, 0); }
		public ITerminalNode RIGHT_PAREN() { return GetToken(RateGrammarParser.RIGHT_PAREN, 0); }
		public ParameterContext parameter() {
			return GetRuleContext<ParameterContext>(0);
		}
		public ApiContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_api; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRateGrammarListener typedListener = listener as IRateGrammarListener;
			if (typedListener != null) typedListener.EnterApi(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRateGrammarListener typedListener = listener as IRateGrammarListener;
			if (typedListener != null) typedListener.ExitApi(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRateGrammarVisitor<TResult> typedVisitor = visitor as IRateGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitApi(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ApiContext api() {
		ApiContext _localctx = new ApiContext(_ctx, State);
		EnterRule(_localctx, 22, RULE_api);
		try {
			State = 132;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,1,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 124; Match(APINAME);
				State = 125; Match(LEFT_PAREN);
				State = 126; Match(RIGHT_PAREN);
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 127; Match(APINAME);
				State = 128; Match(LEFT_PAREN);
				State = 129; parameter();
				State = 130; Match(RIGHT_PAREN);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Case_bodyContext : ParserRuleContext {
		public ValueContext value() {
			return GetRuleContext<ValueContext>(0);
		}
		public ApiContext api() {
			return GetRuleContext<ApiContext>(0);
		}
		public ITerminalNode MUL() { return GetToken(RateGrammarParser.MUL, 0); }
		public ITerminalNode NUMBER() { return GetToken(RateGrammarParser.NUMBER, 0); }
		public Case_bodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_case_body; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRateGrammarListener typedListener = listener as IRateGrammarListener;
			if (typedListener != null) typedListener.EnterCase_body(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRateGrammarListener typedListener = listener as IRateGrammarListener;
			if (typedListener != null) typedListener.ExitCase_body(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRateGrammarVisitor<TResult> typedVisitor = visitor as IRateGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCase_body(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Case_bodyContext case_body() {
		Case_bodyContext _localctx = new Case_bodyContext(_ctx, State);
		EnterRule(_localctx, 24, RULE_case_body);
		try {
			State = 140;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,2,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 134; value();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 135; api();
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 136; api();
				State = 137; Match(MUL);
				State = 138; Match(NUMBER);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Case_expressionContext : ParserRuleContext {
		public Case_headContext case_head() {
			return GetRuleContext<Case_headContext>(0);
		}
		public ITerminalNode COLON() { return GetToken(RateGrammarParser.COLON, 0); }
		public Case_conditionContext case_condition() {
			return GetRuleContext<Case_conditionContext>(0);
		}
		public Case_bodyContext case_body() {
			return GetRuleContext<Case_bodyContext>(0);
		}
		public Case_expressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_case_expression; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRateGrammarListener typedListener = listener as IRateGrammarListener;
			if (typedListener != null) typedListener.EnterCase_expression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRateGrammarListener typedListener = listener as IRateGrammarListener;
			if (typedListener != null) typedListener.ExitCase_expression(this);
		}
